# ide-flatpak-wrapper

./: LICENSE  README.md  bashrc  editor-wrapper.sh  editor.sh  first_run.txt  meson.build  meson_options.txt  sdk_update.txt  shell_wrapper.sh  vscode.sh  wrapper.sh
.github/workflows/: ci.yml
