option('editor_binary', type: 'string')
option('editor_args', type: 'array', value: [])
option('editor_title', type: 'string', value: 'Visual Studio Code')
option('program_name', type: 'string', value: 'code')
option('shell_wrapper_name', type: 'string', value: 'shell-wrapper')
option('flatpak_id', type: 'string')
option('sdk_version', type: 'string')
option('first_run_template', type: 'string', value: 'first_run.txt')
option('sdk_update_template', type: 'string', value: 'sdk_update.txt')
option('flagfile_prefix', type: 'string', value: 'flatpak-vscode')
option('default_loglevel', type: 'string', value: '1')
